fixed header sidr overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,11 +66,11 @@ html, body {
 
 .navbar-fixed-top,
 .navbar-fixed-bottom {
-  /*position: absolute;*/
+  position: absolute;
   position: fixed;
   top:0;
-  /*right: 0;*/
-  /*left: 0;*/
+  right: auto;
+  left: auto;
   width: 100%;
   z-index: 1030;
   margin-bottom: 0;
